<resources>
    <string name="app_name">Geometry</string>
    <string name="Cuadro">Cuadro</string>
    <string name="Circulo">Circulo</string>
    <string name="Cubo">Cubo Perfecto</string>
    <string name="Triangulo">Triangulo Equilatero</string>
    <string name="TheRock">TheRock</string>
    <string name="resultado">Resultado</string>
    <string name="lado">Lado</string>
    <string name="calcular">Calcular</string>
    <string name="radio">Radio</string>
    <string name="base">Lado</string>
    <string name="alto">Lado</string>
</resources>
