<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.therock.geometry.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/rCuadro"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/Cuadro"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/rCirculo"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/Circulo"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/rTriangulo"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/Triangulo"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/rCubo"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/Cubo"
                        android:textSize="15sp" />
                </RadioGroup>

                <Button
                    android:id="@+id/bRegistrar"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.25"
                    android:onClick="onClick"
                    android:text="@string/calcular"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/eLado"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/lado"
                        android:inputType="number"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/eRadio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/radio"
                        android:inputType="number"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/eBase"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:hint="@string/base"
                        android:inputType="number"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/eAlto"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:hint="@string/alto"
                        android:inputType="number"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.9">

                    <TextView
                        android:id="@+id/tInformacion"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Resultado: "
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
